# fastapi-opentelemetry

./: .flake8  README.md  main.py  pyproject.toml  run_migration.py  test.db  tracer.py
alembic/: env.py
alembic/versions/: 745b1cb4e8d5_add_age_column_to_users_table.py  ae3bca3c794a_create_users_table.py
app/: models.py
